[gd_scene load_steps=3 format=3 uid="uid://4otxpady34bs"]

[ext_resource type="Script" uid="uid://dd4vn1lhmjyfh" path="res://ui/scores/ScoreCell.gd" id="1_0t4cr"]
[ext_resource type="Texture2D" uid="uid://c80inq2elqat1" path="res://assets/remove.png" id="2_sa8sk"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(50, 0)
offset_right = 50.0
offset_bottom = 20.0
mouse_default_cursor_shape = 2
script = ExtResource("1_0t4cr")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "123"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
icon = ExtResource("2_sa8sk")
icon_alignment = 1
expand_icon = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="DeleteButton" to="." method="_on_delete_button_mouse_exited"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
